Block uploads until analysis complete

--- a/apps/info-extractor/index.html
+++ b/apps/info-extractor/index.html
@@ -24,7 +24,7 @@
                         <div id="uploadArea" class="upload-area" role="button" tabindex="0" 
                              aria-label="Upload area: Click to select files or drag and drop receipt images here"
                              aria-describedby="upload-instructions">
-                            <div class="upload-icon" aria-hidden="true">📁</div>
+                            <div class="upload-icon" aria-hidden="true">☁</div>
                             <div class="upload-text" id="upload-instructions">
                                 Drag & drop files<br>
                                 here or<br>
