--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -18,12 +18,12 @@
             <!-- Model Loading Progress -->
             <div class="progress-section" id="progress-section">
                 <div class="progress-content">
-                    <div class="progress-icon">🤖</div>
-                    <h2>Loading AI Model</h2>
+                    <img src="images/andrew.png" alt="Andrew" class="andrew-image">
+                    <h2 class="loading-title">Andrew is joining the chat...</h2>
                     <div class="progress-bar">
                         <div class="progress-fill" id="progress-fill"></div>
                     </div>
-                    <p class="progress-text" id="progress-text">Initializing...</p>
+                    <p class="progress-text" id="progress-text">Loading model: 0%</p>
                     <p class="progress-info">This may take a minute on first load</p>
                 </div>
             </div>
@@ -42,7 +42,9 @@
 
                 <div class="chat-messages" id="chat-messages">
                     <div class="welcome-message">
-                        <div class="avatar andrew-avatar">🎓</div>
+                        <div class="avatar andrew-avatar">
+                            <img src="images/andrew-icon.png" alt="Andrew" class="avatar-image">
+                        </div>
                         <div class="message-content">
                             <p class="message-author">Andrew</p>
                             <p>Hi! I'm Andrew, your AI learning assistant. I can help you understand concepts in:</p>
@@ -67,7 +69,7 @@
                             aria-label="Your question"
                         ></textarea>
                         <button id="send-btn" class="send-btn" title="Send message" aria-label="Send message">
-                            <span class="send-icon">📤</span>
+                            <span class="send-icon">▶</span>
                         </button>
                     </div>
                     <div class="input-info">
@@ -83,6 +85,6 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js"></script>
+    <script type="module" src="script.js?v=2"></script>
 </body>
 </html>
