--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -33,9 +33,14 @@
                 <div class="chat-header">
                     <div class="header-content">
                         <h2>💬 Chat with Andrew</h2>
-                        <button class="restart-btn" id="restart-btn" title="Restart conversation">
-                            🔄 New Chat
-                        </button>
+                        <div class="header-buttons">
+                            <button class="mode-toggle-btn" id="mode-toggle" title="Toggle between AI and Simple mode">
+                                📝 Simple Mode
+                            </button>
+                            <button class="restart-btn" id="restart-btn" title="Restart conversation">
+                                🔄 New Chat
+                            </button>
+                        </div>
                     </div>
                     <p class="chat-description">Ask questions about AI, Machine Learning, Speech, Computer Vision, and Information Extraction</p>
                 </div>
@@ -85,6 +90,6 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js?v=2"></script>
+    <script type="module" src="script.js?v=6"></script>
 </body>
 </html>
