--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -88,6 +88,20 @@
                             <span class="send-icon" aria-hidden="true">▶</span>
                         </button>
                     </div>
+                    <div class="example-questions">
+                        <p class="example-label">Try asking:</p>
+                        <div class="example-buttons">
+                            <button class="example-btn" data-question="What's the difference between classification and clustering?">
+                                What's the difference between classification and clustering?
+                            </button>
+                            <button class="example-btn" data-question="How does a large language model work?">
+                                How does a large language model work?
+                            </button>
+                            <button class="example-btn" data-question="Explain how OCR is used for information extraction.">
+                                Explain how OCR is used for information extraction.
+                            </button>
+                        </div>
+                    </div>
                     <div class="input-info">
                         <span id="search-status" class="search-status" role="status" aria-live="polite" aria-atomic="true"></span>
                     </div>
@@ -129,6 +143,6 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js?v=12"></script>
+    <script type="module" src="script.js?v=14"></script>
 </body>
 </html>
