--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -105,6 +105,9 @@
                     <div class="input-info">
                         <span id="search-status" class="search-status" role="status" aria-live="polite" aria-atomic="true"></span>
                     </div>
+                    <div class="disclaimer">
+                        <p>AI-generated content can contain errors</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -143,6 +146,6 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js?v=14"></script>
+    <script type="module" src="script.js?v=16"></script>
 </body>
 </html>
