--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -47,7 +47,6 @@
                             </button>
                         </div>
                     </div>
-                    <p class="chat-description" id="chat-description">Ask questions about AI, Machine Learning, Speech, Computer Vision, and Information Extraction</p>
                 </div>
 
                 <div class="chat-messages" id="chat-messages" role="log" aria-live="polite" aria-relevant="additions" aria-label="Chat conversation">
@@ -106,7 +105,7 @@
                         <span id="search-status" class="search-status" role="status" aria-live="polite" aria-atomic="true"></span>
                     </div>
                     <div class="disclaimer">
-                        <p>AI-generated content can contain errors</p>
+                        <p>AI-generated content can contain mistakes</p>
                     </div>
                 </div>
             </div>
