--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -56,15 +56,7 @@
                         </div>
                         <div class="message-content">
                             <p class="message-author">Andrew</p>
-                            <p>Hi! I'm Andrew, your AI learning assistant. I can help you understand concepts in:</p>
-                            <ul>
-                                <li>🤖 Generative AI & Language Models</li>
-                                <li>📊 Machine Learning</li>
-                                <li>🎤 Speech Recognition & Synthesis</li>
-                                <li>👁️ Computer Vision</li>
-                                <li>📄 Information Extraction</li>
-                            </ul>
-                            <p>What would you like to learn about today?</p>
+                            <p>Hi! I'm Andrew, your AI learning assistant. I can help you understand AI concepts. What would you like to learn about today?</p>
                         </div>
                     </div>
                 </div>
@@ -145,6 +137,6 @@
     </div>
 
     <!-- Scripts -->
-    <script type="module" src="script.js?v=28"></script>
+    <script type="module" src="script.js?v=38"></script>
 </body>
 </html>
