--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -104,7 +104,7 @@
         </div>
 
         <footer role="contentinfo">
-            <p>Powered by WebLLM (Phi-3-mini) • MiniSearch • Compromise.js</p>
+            <p>Powered by WebLLM (Microsoft Phi-3-mini)</p>
         </footer>
     </div>
 
