--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -91,7 +91,7 @@
                             <button class="example-btn" data-question="Explain how OCR is used for information extraction.">
                                 Explain how OCR is used for information extraction.
                             </button>
-                            <button class="example-btn" data-question="What is agentic AI?.">
+                            <button class="example-btn" data-question="What is agentic AI?">
                                 What is agentic AI?
                             </button>
                         </div>
