--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -18,7 +18,7 @@
             <!-- Model Loading Progress -->
             <div class="progress-section" id="progress-section" role="status" aria-live="polite" aria-label="Model loading progress">
                 <div class="progress-content">
-                    <img src="images/andrew.png" alt="Andrew the AI assistant mascot preparing to help you learn" class="andrew-image">
+                    <img src="images/andrew.png" alt="Andrew the AI assistant preparing to help you learn" class="andrew-image">
                     <h2 class="loading-title" id="loading-title">Andrew is joining the chat...</h2>
                     <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" aria-labelledby="progress-text">
                         <div class="progress-fill" id="progress-fill"></div>
@@ -56,7 +56,7 @@
                         </div>
                         <div class="message-content">
                             <p class="message-author">Andrew</p>
-                            <p>Hi! I'm Andrew, your AI learning assistant. I can help you understand AI concepts. What would you like to learn about today?</p>
+                            <p>Hi! I'm Andrew, a simple AI assistant. I can help you understand AI concepts. What would you like to learn about today?</p>
                         </div>
                     </div>
                 </div>
