--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -82,17 +82,20 @@
                     <div class="example-questions">
                         <p class="example-label">Try asking:</p>
                         <div class="example-buttons">
-                            <button class="example-btn" data-question="What's the difference between classification and clustering?">
-                                What's the difference between classification and clustering?
+                            <button class="example-btn" data-question="Define AI">
+                                Define AI
                             </button>
                             <button class="example-btn" data-question="How does a large language model work?">
                                 How does a large language model work?
                             </button>
+                            <button class="example-btn" data-question="What is agentic AI?">
+                                What is agentic AI?
+                            </button>
                             <button class="example-btn" data-question="Explain how OCR is used for information extraction.">
                                 Explain how OCR is used for information extraction.
                             </button>
-                            <button class="example-btn" data-question="What is agentic AI?">
-                                What is agentic AI?
+                            <button class="example-btn" data-question="What's the difference between classification and clustering?">
+                                What's the difference between classification and clustering?
                             </button>
                         </div>
                     </div>
