Renamed index file

--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -11,7 +11,7 @@
     <div class="container" role="main" aria-label="Ask Andrew Chat Application">
         <header role="banner">
             <h1 id="app-title">🎓 Ask Andrew</h1>
-            <p class="subtitle" id="app-subtitle">Your AI Learning Assistant</p>
+            <p class="subtitle" id="app-subtitle">A sample AI assistant for educational purposes only</p>
         </header>
         
         <div class="chat-wrapper">
@@ -91,11 +91,11 @@
                             <button class="example-btn" data-question="What is agentic AI?">
                                 What is agentic AI?
                             </button>
-                            <button class="example-btn" data-question="Explain how OCR is used for information extraction.">
-                                Explain how OCR is used for information extraction.
+                            <button class="example-btn" data-question="What's the relationship between machine learning and AI?">
+                                What's the relationship between machine learning and AI?
                             </button>
-                            <button class="example-btn" data-question="What's the difference between classification and clustering?">
-                                What's the difference between classification and clustering?
+                            <button class="example-btn" data-question="What is computer vision?">
+                                What is computer vision?
                             </button>
                         </div>
                     </div>
