--- a/apps/ask-andrew/index.html
+++ b/apps/ask-andrew/index.html
@@ -82,8 +82,8 @@
                     <div class="example-questions">
                         <p class="example-label">Try asking:</p>
                         <div class="example-buttons">
-                            <button class="example-btn" data-question="Define AI">
-                                Define AI
+                            <button class="example-btn" data-question="What is generative AI?">
+                                What is generative AI?
                             </button>
                             <button class="example-btn" data-question="How does a large language model work?">
                                 How does a large language model work?
@@ -91,11 +91,14 @@
                             <button class="example-btn" data-question="What is agentic AI?">
                                 What is agentic AI?
                             </button>
-                            <button class="example-btn" data-question="What's the relationship between machine learning and AI?">
-                                What's the relationship between machine learning and AI?
+                            <button class="example-btn" data-question="What's the relationship between machine learning and artificial intelligence?">
+                                What's the relationship between machine learning and artificial intelligence?
                             </button>
                             <button class="example-btn" data-question="What is computer vision?">
                                 What is computer vision?
+                            </button>
+                            <button class="example-btn" data-question="Tell me about AI speech">
+                                Tell me about AI speech
                             </button>
                         </div>
                     </div>
